# emb22109

./: .gitignore  .gitmodules  README.md  uEnv.txt
builds/: README.md
final_work/ble_tracking/: README.md
lab-data/wsl/: .wslconfig  README  config-usb_storage  wsl.conf
labs/: README.md
labs/lab01/: README.md  lab01_defconfig
labs/lab01/wsl/: README.md
labs/lab02/: README.md
labs/lab02/files/: S99led
labs/lab02/solution/: dhcpd.conf
labs/lab03/: README.md
labs/lab04/: README.md
projects/: .gitignore  README.md  create.sh
projects/specs/ble_tracking/: README.md
scripts/: S99led  blink_gpio.sh  env.sh  rootfs_update.sh  setup_container.sh
scripts/Container/: Containerfile  extra-packages
scripts/Container-fedora41/: Containerfile
seminars/rtos/: README.md
statecharts/: exemplo_sem.c  semaphore.tgz
statecharts/arduino_example/include/: TrafficLightCtrl.h  TrafficLightOCBs.h  arduinoPins.h  sc_statemachine.h  sc_timer.h  sc_timer_service.h  sc_types.h
statecharts/arduino_example/src/: TrafficLightCtrl.cpp  TrafficLightOCBs.cpp  main.cpp  sc_timer_service.cpp
statecharts/helloSC/: .gitignore  .project  helloSC.sgen  helloSC.ysc
statecharts/semaphore/include/: Semaforo.h  SemaforoOCBs.h
statecharts/semaphore/model/: semaforo.sct  semaforo.sgen
statecharts/semaphore/src/: Semaforo.cpp  SemaforoOCBs.cpp  main.cpp  sc_timer_service.cpp
systemC/adder/: .gitignore  CMakeLists.txt  main.cpp
toolbox/: setup_container.sh
toolbox/Container/: Containerfile  code-templates.tgz  extra-packages  rootfs_update.sh  setup_extensions.sh
(+14 files in other folders)
